feat:  shortcut siri

--- a/Luminary/Info.plist
+++ b/Luminary/Info.plist
@@ -12,6 +12,7 @@
 	<array>
 		<string>DMSerifDisplay-Regular.ttf</string>
 		<string>Baskervville-Regular.ttf</string>
+		<string>LibreBaskerville-Bold.ttf</string>
 	</array>
 </dict>
 </plist>
